<resources>
    <string name="app_name">Dzienniczek Pacjenta</string>
    <string name="signIn">Zaloguj się</string>
    <string name="singUp">Stwórz konto</string>
    <string name="save">Zapisz</string>
    <string name="settings">USTAWIENIA</string>
    <string name="calendar">KALENDARZ WIZYT</string>
    <string name="viewCalendar">Widok kalendarza</string>
    <string name="addMeasurement">DODAJ POMIAR</string>
    <string name="userName">Imię</string>
    <string name="userSurname">Nazwisko</string>
    <string name="email">E-mail</string>
    <string name="password">Hasło</string>
    <string name="repeatPassword">Powtórz hasło</string>
    <string name="accountConfiguration">Konfiguracja konta</string>
    <string name="sex">Płeć</string>
    <string name="female">Kobieta</string>
    <string name="male">Mężczyzna</string>
    <string name="birthDate">Data urodzenia</string>
    <string name="pesel">PESEL</string>
    <string name="aboutNextVisit">Zbliżającej się wizycie</string>
    <string name="aboutTakingMedicines">Konieczności zażycia leków</string>
    <string name="aboutMakingMeasurement">Konieczności wykonania pomiaru</string>
    <string name="next">Dalej</string>
    <string name="selectionOfMeasurements">Wybór pomiarów</string>
    <string name="newNorm">Nowa norma</string>
    <string name="norm">Norma</string>
    <string name="changeNorm">Zmień normę</string>
    <string name="returnNorm">Przywróć normę</string>
    <string name="patientData">Dane pacjenta</string>
    <string name="selectParameter">Parametr</string>
    <string name="parameterData">Data</string>
    <string name="parameterGodzina">Godzina</string>
    <string name="parameterWynik">Wynik</string>
    <string name="plannedVisits"><u>Zaplanowane wiyzyty</u></string>
    <string name="parameterDawka">Dawka</string>
    <string name="goToAddDrug">Dodaj lek</string>
    <string name="listOfDrags">Lista leków</string>
    <string name="listOfMeasurment">Wyświetl pomiary</string>

    <string-array name="calendar_array">
        <item>Dzień</item>
        <item>Tydzień</item>
        <item>Miesiąc</item>
        <item>Rok</item>
    </string-array>
    <string-array name="parameters_array">
        <item>Ciśnienie</item>
        <item>Cukier</item>
        <item>Waga</item>
        <item>Temperatura</item>
        <item>Puls</item>
    </string-array>
    <string-array name="dayOfWeek_array">
        <item>Poniedziałek</item>
        <item>Wtorek</item>
        <item>Środa</item>
        <item>Czwartek</item>
        <item>Piątek</item>
        <item>Sobota</item>
        <item>Niedziela</item>
    </string-array>
    <string-array name="drugs_array">
        <item>Ciśnienie</item>
        <item>Cukier</item>
        <item>Waga</item>
        <item>Temperatura</item>
        <item>Puls</item>
        <item>Suplement</item>
        <item>Inne</item>
    </string-array>
    <string-array name="reminders_array">
        <item>Tego samego dnia</item>
        <item>1 dzień przed</item>
        <item>3 dni przed</item>
        <item>Tydzień przed</item>
    </string-array>


</resources>
